--- a/versions/3.0.1/styles/admin.scss
+++ b/versions/3.0.1/styles/admin.scss
@@ -189,6 +189,10 @@
             transition: .225s;
         }
 
+        select.form-input {
+            padding: 10px!important;
+        }
+
         .form-label {
             font-size: 20px;
         }
